crates/hpc-core/tests/compile-fail/api_invalid_size.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/api_invalid_size.rs
  |
  |     q.read_blocking(&buf, &mut out); // sollte scheitern
  |       ------------- ^^^^ expected `&DeviceBuffer<'_, '_, u32, Ready>`, found `&DeviceBuffer<'_, '_, u32, Empty>`
  |       |
  |       arguments to this method are incorrect
  |
  = note: expected reference `&DeviceBuffer<'_, '_, u32, hpc_core::Ready>`
             found reference `&DeviceBuffer<'_, '_, u32, hpc_core::buffer::state::Empty>`
note: method defined here
 --> src/api.rs
  |
  |     pub fn read_blocking<T>(&'ctx self, _buf: &DeviceBuffer<'id, 'ctx, T, Ready>, _out: &mut [T])
  |            ^^^^^^^^^^^^^
